force-app/main/default/objects/BKLProjects__c/BKLProjects__c.object-meta.xml
<CustomObject>
    <label>BKLProjects</label>
    <nameField>
        <label>BKLProjects</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BKLProjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>