force-app/main/default/objects/BKLProjects__c/fields/Completed_Detail__c.field-meta.xml
<CustomField>
    <fullName>Completed_Detail__c</fullName>
    <label>Completed Detail</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Status</fullName>
            </value>
            <value>
                <fullName>Picklist</fullName>
            </value>
            <value>
                <fullName>Completed_Detail__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>