force-app/main/default/objects/BKLProjects__c/fields/Discovery_True__c.field-meta.xml
<CustomField>
    <fullName>Discovery_True__c</fullName>
    <formula>CONTAINS(Name, &quot;Discover&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discovery=True</label>
    <type>Checkbox</type>
</CustomField>