force-app/main/default/objects/BKLProjects__c/fields/Estimated_Scope_Hours__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Scope_Hours__c</fullName>
    <label>Estimated Scope, Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>