force-app/main/default/objects/BKLProjects__c/fields/Grand_Total__c.field-meta.xml
<CustomField>
    <fullName>Grand_Total__c</fullName>
    <formula>&quot;Total&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grand Total</label>
    <type>Text</type>
</CustomField>