force-app/main/default/objects/BKLProjects__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>Project Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>