force-app/main/default/objects/BKLProjects__c/fields/Parent_Project__c.field-meta.xml
<CustomField>
    <fullName>Parent_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Project</label>
    <referenceTo>SFDC_Project__c</referenceTo>
    <relationshipLabel>BKLProjects</relationshipLabel>
    <relationshipName>BKLProjects</relationshipName>
    <type>Lookup</type>
</CustomField>