force-app/main/default/objects/BKLProjects__c/fields/Project_Rate__c.field-meta.xml
<CustomField>
    <fullName>Project_Rate__c</fullName>
    <label>Project Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>