force-app/main/default/objects/BKLProjects__c/fields/This_Weeks_Forecast_Hours__c.field-meta.xml
<CustomField>
    <fullName>This_Weeks_Forecast_Hours__c</fullName>
    <label>This Week&apos;s Forecast Hours</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>