force-app/main/default/objects/BKLProjects__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Completed_Detail__c</columns>
    <columns>Description__c</columns>
    <columns>Estimated_Scope_Hours__c</columns>
    <columns>Next_Step__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>